package com.progettoids_giuseppedemarco.repository;

import com.progettoids_giuseppedemarco.domain.Film;

public interface FilmRepository extends CrudRepository<Film, Integer> {
}

